# cpuprofiler-static

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  download.sh
examples/: primes.rs
src/: lib.rs
