[package]
name = "gperftools-static"
version = "0.1.0"
authors = ["Yang Keao <keao.yang@yahoo.com>"]
edition = "2018"
license = "Apache-2.0"
description = "cpuprofiler with static linked gperftools and unwind"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gperftools = "0.2.0"

[features]
default = []
static_unwind = []
static_gperftools = []

[build-dependencies]
num_cpus = "1.8"
fs_extra = "1.1.0"
